@@ -180,7 +180,7 @@ Encoder::frame_done ()
 void
 Encoder::process_video (shared_ptr<PlayerImage> image, Eyes eyes, ColourConversion conversion, bool same)
 {
-	kick ();
+	_waker.nudge ();
 	
 	boost::mutex::scoped_lock lock (_mutex);
 
