@@ -1,3 +1,7 @@
+2014-03-03  Carl Hetherington  <cth@carlh.net>
+
+	* Try to prevent OS X from sleeping during DCP encode.
+
 2014-02-26  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.64.17 released.
